--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <a href="#">Home</a>
                     <div class="dropdown-menu">
                         <ul>
-                            <li><a href="Nagesha KS Draft 1.pdf" download>Download CV</a></li>
+                            <li><a href="Nagesha KS Draf1.pdf" download>Download CV</a></li>
                         </ul>
                     </div>
 
