--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li class="abt"><a href="#about">About</a></li>
                 <li><a href="#">Experience</a></li>
                 <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Blog</a></li>
+                <li><a href="https://medium.com/@nageshaks9743">Blog</a></li>
                 <li><a href="#form-container">Contact</a></li>
                 </ul>
             </nav>
@@ -53,7 +53,7 @@
                     <p class="imae"><a href="https://youtube.com/@CloudTech007"><img  class ="gmail" src="inpixio-removebg-image (1).png" ></a></p>
                     <p class="imae"><a href="https://github.com/NAGESHGOWDA1993"><img  class ="github" src="25231.png" ></a></p>
                     <p class="imae"><a href="https://www.linkedin.com/in/nageshaks"><img  class ="linkedin" src="linked.png" ></a></p>
-                    <p class="imae"><a href="#"><img  class ="medium" src="medium.png" ></a></p>
+                    <p class="imae"><a href="">https://medium.com/@nageshaks9743<img  class ="medium" src="medium.png" ></a></p>
                     <p class="imae"><a href="tel:+447436728470"><img  class ="whatsapp" src="th (3) (1).png" ></a></p>
                     
                 </span>
