--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <form   name="submit-to-google-sheet">
                 <input  id= "email"name="email" type="email" placeholder="Email" required>
                 <br>
-                <input  id= "num"name="num" type="number" placeholder="Num" required>
+                <input  id= "num"name="Phone Number(Optional)" type="number" placeholder="Num" required>
                 <br>
                 
                 <input  id= "name"name="name" type="name" placeholder="Name" required>
