--- a/index.html
+++ b/index.html
@@ -15,15 +15,8 @@
             <nav>
                 <img src="logo (1).png" class="logo">
                 <ul>
-                <li>
-                    <a href="#">Home</a>
-                    <div class="dropdown-menu">
-                        <ul>
-                            <li><a href="Nagesha KS Draf1.pdf" download>Download CV</a></li>
-                        </ul>
-                    </div>
-
-                </li>
+                <li><a href="#">Home</a></li>
+                <li><a href="Nagesha KS Draf1.pdf" download>Download CV</a></li>
                 <li class="abt"><a href="#about">About</a></li>
                 <li><a href="#">Experience</a></li>
                 <li><a href="#">Portfolio</a></li>
