--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+u<!DOCTYPE html>
 <html lang="en">
 <head>
  <meta charset="UTF-8"/>   
@@ -135,7 +135,7 @@
 {
     position: absolute;
     top: 180px;
-    right: -230px;
+    right: -235px;
 
     display: flex;
     margin: 20px 0 40px;
