--- a/index.html
+++ b/index.html
@@ -192,14 +192,14 @@
 <body>
     <div class="container">
         <div class="profile">
-            <img class="profile-image" src="/Users/admin/Desktop/CIG Assignment /new webiste/photo/Screenshot 2024-12-09 at 23.19.25.png" alt="Profile Picture">
+            <img class="profile-image" src="/photo/profile.png" alt="Profile Picture">
             <div class="profile-text">
                 <h2 id="auto-type">Nagesha Somashekara</h2> <!-- Dynamic typing will happen here -->
                 <span class="typed-cursor"></span> <!-- Cursor added here for inline effect -->
                 <div class="location">
                     <span>&#x1F4CD;</span> United Kingdom
                 </div>
-                <p>DevOps and Cloud Engineer with over 5 years of experience in optimizing cloud environments and automating infrastructure across AWS, GCP, and Azure. Passionate about AI, tech blogging, and building scalable, secure systems. Find my CV <a href="/Users/admin/Desktop/CIG Assignment /new webiste/CV/NAGESHA-KS-CV.pdf" style="color: #FF8C00;">here</a>, showcasing expertise in CI/CD pipelines, infrastructure-as-code solutions, and cloud performance optimization. In my free time, I explore AI innovations, swim, play tennis, or enjoy music.</p>
+                <p>DevOps and Cloud Engineer with over 5 years of experience in optimizing cloud environments and automating infrastructure across AWS, GCP, and Azure. Passionate about AI, tech blogging, and building scalable, secure systems. Find my CV <a href="/CV/NAGESHA-KS-CV.pdf" style="color: #FF8C00;">here</a>, showcasing expertise in CI/CD pipelines, infrastructure-as-code solutions, and cloud performance optimization. In my free time, I explore AI innovations, swim, play tennis, or enjoy music.</p>
             </div>
         </div>
 
