--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
                 <div class="location">
                     <span>&#x1F4CD;</span> United Kingdom
                 </div>
-                <p>DevOps and Cloud Engineer with over 6+ years of experience in optimizing cloud environments and automating infrastructure across AWS, GCP, and Azure. Passionate about AI, tech blogging, and building scalable, secure systems. Find my CV <a href="NAGESHA-KS-CV.pdf" style="color: #FF8C00;">here</a>, showcasing expertise in CI/CD pipelines, infrastructure-as-code solutions, and cloud performance optimization. In my free time, I explore AI innovations, swim, play cricketS, or enjoy music.</p>
+                <p>DevOps and Cloud Engineer with over 6+ years of experience in optimizing cloud environments and automating infrastructure across AWS, GCP, and Azure. Passionate about AI, tech blogging, and building scalable, secure systems. Find my CV <a href="NAGESHA-KS-CV.pdf" style="color: #FF8C00;">here</a>, showcasing expertise in CI/CD pipelines, infrastructure-as-code solutions, and cloud performance optimization. In my free time, I explore AI innovations, swim, play cricket, or enjoy music.</p>
             </div>
         </div>
 
