--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Poppins', sans-serif;
-            background-color: #1A2A5B;
+            background-color: #203164;
             color: white;
             display: flex;
             justify-content: center;
@@ -192,14 +192,14 @@
 <body>
     <div class="container">
         <div class="profile">
-            <img class="profile-image" src="profile.png" alt="Profile Picture">
+            <img class="profile-image" src="profile.JPG" alt="Profile Picture">
             <div class="profile-text">
                 <h2 id="auto-type">Nagesha Somashekara</h2> <!-- Dynamic typing will happen here -->
                 <span class="typed-cursor"></span> <!-- Cursor added here for inline effect -->
                 <div class="location">
                     <span>&#x1F4CD;</span> United Kingdom
                 </div>
-                <p>DevOps and Cloud Engineer with over 6+ years of experience in optimizing cloud environments and automating infrastructure across AWS, GCP, and Azure. Passionate about AI, tech blogging, and building scalable, secure systems. Find my CV <a href="NAGESHA-KS-CV.pdf" style="color: #FF8C00;">here</a>, showcasing expertise in CI/CD pipelines, infrastructure-as-code solutions, and cloud performance optimization. In my free time, I explore AI innovations, swim, play cricket, or enjoy music.</p>
+                <p>Cloud Engineer and DevOps with over 6+ years of experience in optimizing cloud environments and automating infrastructure across AWS, GCP, and Azure. Passionate about AI, tech blogging, and building scalable, secure systems. Find my CV <a href="NAGESHA-KS-CV.pdf" style="color: #FF8C00;">here</a>, showcasing expertise in CI/CD pipelines, infrastructure-as-code solutions, and cloud performance optimization. In my free time, I explore AI innovations, swim, play cricket, or enjoy music.</p>
             </div>
         </div>
 
